# paylink

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_entity_description.py  0003_admin_superadmin.py
backend/src/: main.py
backend/src/application/: dto.py
backend/src/application/use_cases/: __init__.py  auth.py  handle_webhook.py  initiate_payment.py  list_transactions.py  manage_admins.py  manage_entities.py  verify_payment.py
backend/src/config/: settings.py
backend/src/domain/: exceptions.py
backend/src/domain/models/: __init__.py  admin_user.py  entity.py  enums.py  transaction.py
backend/src/domain/ports/: __init__.py  payment_gateway.py  repositories.py  security.py
backend/src/infrastructure/adapters/kkiapay/: __init__.py  gateway.py
backend/src/infrastructure/adapters/postgres/: __init__.py  mappers.py  orm.py  repositories.py  session.py
backend/src/infrastructure/adapters/security/: __init__.py  crypto.py  jwt.py  password.py
backend/src/interfaces/api/: converters.py  deps.py  schemas.py
backend/src/interfaces/api/routers/: __init__.py  admin.py  admin_auth.py  payments.py  public.py  webhooks.py
backend/src/interfaces/cli/: commands.py
backend/tests/: fakes.py  test_api.py  test_use_cases.py
frontend/admin/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/payment/: Dockerfile  package.json  (+1 more)
(+41 files in other folders)
