[tool.poetry]
name = "paylink-api"
version = "1.0.0"
description = "PayLink — multi-entity Kkiapay payment platform backend (FastAPI, hexagonal architecture)"
authors = ["SBBS <dev@sbbs.local>"]
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = ">=3.12, <4.0.0"
fastapi = { version = "0.115.12", extras = ["standard"] }
uvicorn = { version = "0.34.0", extras = ["standard"] }
sqlalchemy = { version = "2.0.36", extras = ["asyncio"] }
asyncpg = "0.30.0"
alembic = "1.14.0"
pydantic = { version = "2.10.4", extras = ["email"] }
pydantic-settings = "2.7.0"
python-jose = { version = "3.3.0", extras = ["cryptography"] }
bcrypt = "4.2.1"
cryptography = "44.0.0"

[tool.poetry.group.test.dependencies]
pytest = "8.3.4"
pytest-asyncio = "0.25.0"
pytest-cov = "6.0.0"
aiosqlite = "0.20.0"

[tool.poetry.group.dev.dependencies]
black = ">=24.10.0"
isort = "5.13.2"
flake8 = "7.1.1"

[tool.poetry.scripts]
app = "src.interfaces.cli.commands:app"

[tool.black]
line-length = 110
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 110

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = "test_*.py"
testpaths = ["tests"]
filterwarnings = ["ignore"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
